--- a/app/src/main/res/layout/model_title.xml
+++ b/app/src/main/res/layout/model_title.xml
@@ -18,4 +18,11 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Rick And Morty" />
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_male"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="75dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
