--- a/app/src/main/res/layout/model_character_detail_image.xml
+++ b/app/src/main/res/layout/model_character_detail_image.xml
@@ -5,24 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/headerImageView"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:layout_marginTop="32dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/headerImageView"
-            android:layout_width="220dp"
-            android:layout_height="220dp"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/backgrounds/scenic[5]"/>
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/backgrounds/scenic[5]"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RickAndMorty"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
