--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ShapeAppearanceOverlay.RickAndMorty" parent="">
+        <item name="cornerSize">50%</item>
+<!--        <item name="cornerFamily">cut</item>-->
+<!--        <item name="cornerSizeTopLeft">15%</item>-->
+    </style>
 </resources>
