layout Search and go to detail

--- a/app/src/main/res/layout/fragment_detail_episode.xml
+++ b/app/src/main/res/layout/fragment_detail_episode.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?colorSurface"
+    android:paddingBottom="10dp"
     tools:context=".ui.episode.detail.DetailEpisodeFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
